--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,8 @@ name: 'Deploy to Caprover Using GitHub Actions'
 description: 'Deploys your GitHub Repo to CapRover'
 branding:
   icon: 'caprover.svg'
-  color: blue
+  color: orange
+  label: caprover logo
 inputs:
   server:
     description: 'The URL to your caprover e.g captain.your-domain.com'
